[package]
name = "open_isobus"
version = "0.1.0"
edition = "2021"

[dependencies]
nb = "1.0.0"
log = "0.4.16"
bitflags = "1.3.2"
pcan-basic = { version = "1.0.2", optional = true }
socketcan = { version = "1.7.0", optional = true }

[features]
default = ["mock_can_driver", "log_can"]
win32 = ["std", "peak_can_driver", "log_can"]
cm4 = ["std", "socket_can_driver"]

# Driver options
std = []
peak_can_driver = ["pcan-basic"]
mock_can_driver = []
socket_can_driver = ["socketcan"]

# Logging options
log_can = ["log_can_read", "log_can_write"]
log_all_can = ["log_all_can_read", "log_can_write"]
log_can_write = []
log_can_read = []
log_all_can_read = []


[dev-dependencies]
env_logger = "0.9.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = ["log", "integrated-timers", "std", "nightly"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = ["std"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", features = [] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", features = [] }
